# MSP430FR4133_Temperature

./: .travis.yml  Cargo.toml  Makefile  README.md  build.rs  memory.x  msp430.json
.cargo/: config
ldscripts/: .msp430fr4133.h.swp  msp430fr4133.h  msp430fr4133.ld
src/: adc.rs  lcd.rs  lcd_helper.rs  main.rs
